[package]
name = "voltre"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
revolt = { path = "../" }
tokio = { version = "1.10.1", features = ["full"] }
async-trait = "0.1.51"
nekoslife = { version = "0.2.1", default-features = false, features = ["default-tls", "sfw"] }